<resources>
    <string name="app_name">Ders Takip</string>

    <string name="title_activity_gunler">Ders Programı</string>
    <string name="duzenle">Dersi Düzenle</string>

    <string name="dersprogrami">Ders Programı</string>
    <string name="notlar">Notlar</string>
    <string name="dersler">Dersler</string>
    <string name="ayarlar">Ayarlar</string>

    <string name="splash">Ders Takip</string>

    <string name="dersbaslangic">Ders Başlangıç Saati</string>
    <string name="derssuresi">Ders Süresi</string>
    <string name="dersbaslangictanimsiz">Ders Başlangıç Saati Tanımlanmamış</string>

    <string name="kaydet">Kaydet</string>
    <string name="bildirim">Bildirim</string>
    <string name="notduzenle">Düzenle</string>

    <string name="notekle">Not Ekle</string>

    <string name="baslangic">Başlangıç</string>
    <string name="bitis">Bitiş</string>
    <string name="teneffüs">Tenefüs Süresi</string>

    <string name="pazartesi">Pazartesi</string>
    <string name="sali">Salı</string>
    <string name="carsamba">Çarşamba</string>
    <string name="persembe">Perşembe</string>
    <string name="cuma">Cuma</string>
    <string name="cumartesi">Cumartesi</string>
    <string name="pazar">Pazar</string>

    <string name="ders">Ders</string>
    <string name="guncelle">Güncelle</string>
    <string name="oglearasi">--Öğle Arası--</string>
    <string name="oglearasisuresi">Öğle Arası Süresi</string>

    <string name="dersyok">Ders Yok Ders Eklemek İster Misiniz ?</string>

    <string name="dersilindi">Ders Silindi</string>

    <string name="dersisilindi">Dersi Silindi</string>
    <string name="derssil">Ders Sil</string>
    <string name="derssiluyari">Dersi Silmek İstediğinize Emin Misiniz ?</string>
    <string name="derseklendi">Ders Eklendi</string>
    <string name="oglearasieklendi">Öğle Arası Eklendi</string>
    <string name="derseklenemedi">Ders Eklenemedi</string>
    <string name="bosders">--Boş Ders--</string>
    <string name="dersguncellendi">Ders Güncellendi</string>
    <string name="dersguncellenemedi">Ders Güncellenemdi</string>


    <string name="dersnotsil">Dersinin Tüm Notlarını Silinecek</string>
    <string name="dersnotsilonay">Dersinin Silmek İstediğinize Emin Misiniz ?</string>
    <string name="notsilindi">Notlar Silindi</string>
    <string name="notsilinemedi">Notlar Silinemedi</string>

    <string name="notbulunamadi">Ders Notu Bulunamadı.
        Not Eklensin Mi ?</string>
    <string name="notyok">Not Yok</string>

    <string name="resimyok">Resim Tanınamadı</string>

    <string name="konuuyari">Lütfen Konu Başlığı Giriniz</string>
    <string name="notuyari">Lütfen Not Giriniz</string>
    <string name="noteklendi">Not Eklendi</string>
    <string name="noteklenemedi">Not Eklenemedi</string>
    <string name="notguncellendi">Not Güncellendi</string>

    <string name="not">Not</string>
    <string name="notpaylas">Not Paylaş</string>
    <string name="notpaylasim">Not Paylaşılıyor Lütfen Bekleyiniz</string>
    <string name="izinuyari">Paylaşım Özelliğini Kullanmak İçin İzin Gereklidir.</string>

    <string name="baslik">Başlık</string>
    <string name="dersbos">Ders Adı Boş Geçilemez</string>

    <string name="konu">Konu</string>
    <string name="konugor">Konu</string>
    <string name="notgor">Not</string>
    <string name="dersekle">Ders Ekle</string>
    <string name="resimekle">Fotoğraf Ekle</string>
    <string name="paylas">Paylaş</string>
    <string name="notgorduzenle">Düzenle</string>
    <string name="dersnotlari">Ders Notları</string>
    <string name="ceviri">Çeviri : Merve Demirağ - Emirhan Demirağ</string>

    <string name="tamam">Tamam</string>
    <string name="hayir">Hayır</string>
    <string name="evet">Evet</string>

    <string name="ekle">Ekle</string>
    <string name="hata">Hata</string>
    <string name="cikisyap">Çıkış Yapmak İstediğine Emin Misiniz ?</string>

    <string name="bannerAdsId">ca-app-pub-9361831426651608/9620720216</string>
    <string name="oglearasıeklendi">Öğle Arası Eklendi</string>
    <string name="dersguncellenmedi">Ders Güncellenemedi</string>
    <string name="notgüncellendi">Not Güncellendi</string>
    <string name="dersnotu">Ders Notu</string>
    <string name="dersprogramisil">Ders Programını Sil</string>
    <string name="dersprogramisilonay">Ders Programını Silmek İstediğinize Emin Misiniz ?</string>
    <string name="dersprogramisilindi">Ders Programı Silindi</string>
    <string name="notara">Not Ara</string>
    <string name="fotografcek">Fotoğraf Çek</string>
    <string name="anasayfa">Anasayfa</string>


    <string name="dakika">Dakika</string>
    <string name="ayarlarkaydet">Ayarlar Kaydedildi</string>

    <string name="sonnotlar">Son Notlar</string>

    <string name="ara">Ara (Ders/Not)</string>
    <string name="site">fatihdemirag.net</string>
    <string name="tum">Tümü</string>
</resources>
