<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ders"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/dersAdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ders" />

        <Button
            android:id="@+id/dersEkle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_margin="10dp"
            android:text="@string/dersekle" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/bannerAdsId" />
    </LinearLayout>
</LinearLayout>