<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/customList"
    tools:context="fatihdemirag.net.dersprogram.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardview"
        android:layout_margin="5dp"
        android:elevation="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dersId"
            android:text="0"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:id="@+id/baslangicSaat"
                    android:text="@string/baslangic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:id="@+id/bitisSaat"
                    android:text="@string/bitis" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:id="@+id/tenefusSuresiYazi"
                    android:text="@string/teneffüs" />
                <NumberPicker
                    android:id="@+id/tenefusSuresiNumberPicker"
                    android:layout_width="90dp"
                    android:layout_marginLeft="-10dp"
                    android:layout_height="40dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:id="@+id/ders"
                    android:visibility="invisible"
                    android:text="@string/ders" />

                <Spinner
                    android:id="@+id/dersler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-25dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/onayButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:textSize="6dp"
                        android:background="@drawable/button_circle"
                        android:text="@string/kaydet"/>
                    <Button
                        android:id="@+id/dersNotuEkle"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/button_circle"
                        android:layout_marginLeft="5dp"
                        android:textSize="6dp"
                        android:text="@string/notekle" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>