<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="fatihdemirag.net.dersprogram.Ayarlar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dersbaslangic"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_background"
        android:padding="5dp"
        android:orientation="horizontal">

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/dersBaslangicSaati"
            android:timePickerMode="spinner" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/derssuresi"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_background"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <NumberPicker
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/dersSuresi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kaydet"
            android:background="@drawable/buton_arkaplan"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:id="@+id/ayarKaydet"
            android:layout_marginBottom="10dp"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ceviri"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>
