<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dersbaslangic"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/dersBaslangicSaati"
                android:timePickerMode="spinner" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/derssuresi"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/dersSuresi" />

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kaydet"
            android:background="@android:color/white"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:id="@+id/ayarKaydet"
            android:layout_margin="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dersProgramiSil"
                android:padding="10dp"
                android:weightSum="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dersprogramisil"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#b71c1c"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:id="@+id/site"
            android:layout_marginBottom="30dp"
            android:textSize="12dp" />
    </LinearLayout>


</FrameLayout>