<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".ui.Fragment.NoteDetail">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/notGelenResim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white" />
            </LinearLayout>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:weightSum="1">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:textColor="@color/black_overlay"
                                android:text="@string/konugor" />

                        <TextView
                                android:id="@+id/notGelenBaslik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-" />

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:layout_gravity="left"
                                android:textColor="@color/black_overlay"
                                android:text="@string/notgor" />

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <TextView
                                    android:id="@+id/notGelen"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="-"
                                    android:layout_marginTop="5dp"
                                    android:textIsSelectable="true" />

                            <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textMultiLine"
                                    android:visibility="invisible"
                                    android:layout_marginTop="-20dp"
                                    android:id="@+id/yeniNot" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/paylas"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/paylas"
                        android:paddingLeft="10dp"
                        android:background="@android:color/white"/>

                <Button
                        android:id="@+id/notGuncelle"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/notduzenle"
                        android:paddingLeft="10dp"
                        android:background="@android:color/white" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
